--- a/content/courses/ekonometri-ars-I-II/01-ec.Rmd
+++ b/content/courses/ekonometri-ars-I-II/01-ec.Rmd
@@ -37,13 +37,20 @@ Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegr
 - [QR Kod - Telefon İçin](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_I-II_Telegram Kanali Duyurusu_Ilan.pdf")`) `r emo::ji(tr)`
 
 ## Ders Planı ve Önemli Günler
+#### Ekonometri Araştırmaları I
 | 1. Öğretim | 2. Öğretim |
 | :--- | :--- |
-| [Ders Planı](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_I-II_1O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` | [Ders Planı](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_I-II_2O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` |
-| [Önemli Günler](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_I-II_1O - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` | [Önemli Günler](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_I-II_1O - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` |
+| [Ders Planı](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_I_1O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)` | [Ders Planı](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_I_2O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)` |
+| [Önemli Günler](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_I_1O - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)` | [Önemli Günler](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_I_2O - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)` |
+
+#### Ekonometri Araştırmaları II
+| 1. Öğretim | 2. Öğretim |
+| :--- | :--- |
+| [Ders Planı](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_II_1O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)` | [Ders Planı](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_II_2O - Ders Plani (Kara).pdf")`) `r emo::ji(tr)` |
+| [Önemli Günler](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_II_1O - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)` | [Önemli Günler](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_II_2O - Onemli Gunler (Kara).pdf")`) `r emo::ji(tr)` |
 
 ## Ders Kaynakları
-- [Kaynakların Açıklaması](`r paste0(ekonometri.ars.path, "Ekonometri Ars_I-II_Kaynaklarin Aciklamasi (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Kaynakların Açıklaması](`r paste0(ekonometri.ars.path, "Ekonometri Ars_I-II_Kaynaklarin Aciklamasi (Kara).pdf")`) `r emo::ji(tr)`
 
 ## Ders Değerlendirme Anketi
 - [Ders Değerlendirme Anketi - Açıklama](`r paste0(ekonometri.ars.path, "EC/Ekonometri Ars_I-II_Ders Degerlendirme Anketi.pdf")`) `r emo::ji(tr)`
