--- a/content/courses/ekonometri-ars-I-II/3-exams-ps.Rmd
+++ b/content/courses/ekonometri-ars-I-II/3-exams-ps.Rmd
@@ -1,6 +1,6 @@
 ---
-title: Ödev ve Sınavlar
-linktitle: Ödev ve Sınavlar
+title: Sınavlar ve Sunum
+linktitle: Sınavlar ve Sunum
 date: "2020-10-05"
 lastmod: "2020-10-13"
 draft: false
@@ -30,12 +30,25 @@ outdated <- "no_entry"
 İncelediğiniz sayfada `r emo::ji(tr)` <font color="red">**Türkçe**</font>, `r emo::ji(eng)` <font color="red">**İngilizce**</font>, `r emo::ji(to.be.updated)` <font color="red">**Güncellenecek**</font>, `r emo::ji(in.progress)` <font color="red">**Üzerinde Çalışılan**</font> ve `r emo::ji(outdated)` <font color="red">**Artık Geçerli Olmayan**</font> içerikleri ifade eder.
 {{% /alert %}}
 
-## Ödevler
-- [CANVAS'ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
-    - [DYS'de Online Çoktan Seçmeli Ödev Nasıl Yapılır?](https://www.youtube.com/watch?v=OOqC0JrtOaI&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
-
 ## Sınavlar
-- [CANVAS'ta Online Sınav Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
-    - [DYS'de Online Sınav Nasıl Yapılır?](https://www.youtube.com/watch?v=V_Oyg-WGoK4&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
-- [CANVAS'ta Online Yazılı Sınav Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
-    - [DYS'de Online Yazılı Sınav Nasıl Yapılır?](https://www.youtube.com/watch?v=wsUB6-fTxA8&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
+- [Konu Önerisi Açıklaması](`r paste0(ekonometri.ars.path, "Ekonometri Ars_I-II_Konu Onerisi Aciklamasi (Kara).pdf")`) `r emo::ji(tr)`
+- [Örnek Konu Açıklaması](`r paste0(ekonometri.ars.path, "Ekonometri Ars_I-II_Ornek Konu Aciklamasi (Kara).pdf")`) `r emo::ji(tr)`
+- [Data Açıklaması](`r paste0(ekonometri.ars.path, "Ekonometri Ars_I-II_Data Aciklamasi (Kara).pdf")`) `r emo::ji(tr)`
+- [Makale Taslak Açıklaması](`r paste0(ekonometri.ars.path, "Ekonometri Ars_I-II_Makale Taslak Aciklamasi (Kara).pdf")`) `r emo::ji(tr)`
+- [Akademik Etik Açıklaması](`r paste0(ekonometri.ars.path, "Ekonometri Ars_I-II_Akademik Etik Aciklamasi (Kara).pdf")`) `r emo::ji(tr)`
+- [JEL Sınıflandırma Kodları](https://www.aeaweb.org/jel/guide/jel.php) `r emo::ji(eng)`
+- [CANVAS'a Online Klasik Sınav Nasıl Yüklenir?]() `r emo::ji(tr)``r emo::ji(in.progress)`
+    - [DYS'ye Online Klasik Sınav Nasıl Yüklenir?](https://www.youtube.com/watch?v=wsUB6-fTxA8&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
+
+## Sunum
+- [Sunum Değerlendirme Esasları (Ekonometri Araştırmaları I Dersi İçin)](`r paste0(ekonometri.ars.path, "Ekonometri Ars_I_Sunum Degerlendirme (Kara).pdf")`) `r emo::ji(tr)`
+- [Sunum Değerlendirme Esasları (Ekonometri Araştırmaları II Dersi İçin)](`r paste0(ekonometri.ars.path, "Ekonometri Ars_II_Sunum Degerlendirme (Kara).pdf")`) `r emo::ji(tr)`
+- [CANVAS'a Online Klasik Ödev veya Sunum Nasıl Yüklenir?]() `r emo::ji(tr)``r emo::ji(in.progress)`
+
+### Örnek Makale ve Sunumlar
+- [Makale Örneği - Taslak (Ömer Kara)](`r paste0(ekonometri.ars.path, "Article.pdf")`) `r emo::ji(tr)`
+- [Makale Örneği - 1 (Elif Yıldız - 2021 Bahar 4. Sınıf Öğrencisi)](`r paste0(ekonometri.ars.path, "Makale__Ornek_1__Elif Yildiz.pdf")`) `r emo::ji(tr)`
+- [Makale Örneği - 2 (İlknur Büşra Çakır - 2021 Bahar 4. Sınıf Öğrencisi)](`r paste0(ekonometri.ars.path, "Makale__Ornek_1__Ilknur Busra Cakir.pdf")`) `r emo::ji(tr)`
+- [Sunum Örneği - 1 (Ömer Kara)](`r paste0(ekonometri.ars.path, "Sunum__Ornek_1__Omer Kara.pdf")`) `r emo::ji(eng)`
+- [Sunum Örneği - 2 (Ömer Kara)](`r paste0(ekonometri.ars.path, "Sunum__Ornek_2__Omer Kara.pdf")`) `r emo::ji(eng)`
+- [Sunum Örneği - 3 (İlknur Büşra Çakır - 2021 Bahar 4. Sınıf Öğrencisi)](`r paste0(ekonometri.ars.path, "Sunum__Ornek_3__Ilknur Busra Cakir.pptx")`) `r emo::ji(eng)`
