--- a/content/courses/ekonometrik-modelleme/3-exams-ps.Rmd
+++ b/content/courses/ekonometrik-modelleme/3-exams-ps.Rmd
@@ -37,7 +37,7 @@ outdated <- "no_entry"
 ## Sınavlar
 - [Ara Sınav - İnceleme](`r paste0(ekonometrik.modelleme.path, "Ekonometrik Modelleme - Ara Sinav Inceleme (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Final Sınavı - İnceleme](`r paste0(ekonometrik.modelleme.path, "Ekonometrik Modelleme - Final Sinavi Inceleme (Kara).pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
-- [CANVAS'ta Online Sınav Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
-    - [DYS'de Online Sınav Nasıl Yapılır?](https://www.youtube.com/watch?v=V_Oyg-WGoK4&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
-- [CANVAS'ta Online Yazılı Sınav Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
-    - [DYS'de Online Yazılı Sınav Nasıl Yapılır?](https://www.youtube.com/watch?v=wsUB6-fTxA8&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
+- [CANVAS'ta Online Çoktan Seçmeli Sınav Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
+    - [DYS'de Online Çoktan Seçmeli Sınav Nasıl Yapılır?](https://www.youtube.com/watch?v=V_Oyg-WGoK4&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
+- [CANVAS'a Online Klasik Sınav Nasıl Yüklenir]() `r emo::ji(tr)``r emo::ji(in.progress)`
+    - [DYS'ye Online Klasik Sınav Nasıl Yüklenir?](https://www.youtube.com/watch?v=wsUB6-fTxA8&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
