--- a/content/courses/ekonometri-i/4-lectures.Rmd
+++ b/content/courses/ekonometri-i/4-lectures.Rmd
@@ -32,7 +32,7 @@ outdated <- "no_entry"
 
 ## Hafta #1
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Slaytlar](`r paste0(ekonometri.i.path, "Ekonometri_I_-_Hafta_1.pdf")`) `r emo::ji(tr)``r emo::ji(to.be.updated)`
+- [Slaytlar](`r paste0(ekonometri.i.path, "Ekonometri_I_-_Hafta_1.pdf")`) `r emo::ji(tr)`
 
 ## Hafta #2
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
