--- a/content/courses/ekonometrik-modelleme/4-lectures.Rmd
+++ b/content/courses/ekonometrik-modelleme/4-lectures.Rmd
@@ -30,6 +30,10 @@ outdated <- "no_entry"
 İncelediğiniz sayfada `r emo::ji(tr)` <font color="red">**Türkçe**</font>, `r emo::ji(eng)` <font color="red">**İngilizce**</font>, `r emo::ji(to.be.updated)` <font color="red">**Güncellenecek**</font>, `r emo::ji(in.progress)` <font color="red">**Üzerinde Çalışılan**</font> ve `r emo::ji(outdated)` <font color="red">**Artık Geçerli Olmayan**</font> içerikleri ifade eder.
 {{% /alert %}}
 
+## R mini BootCamp
+- [HTML](https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.html) `r emo::ji(eng)`
+    + [R](https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.R) `r emo::ji(eng)`
+
 ## Hafta #1
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_1.pdf")`) `r emo::ji(tr)`
