--- a/content/courses/economics/2-links-docs.Rmd
+++ b/content/courses/economics/2-links-docs.Rmd
@@ -30,6 +30,10 @@ outdated <- "no_entry"
 On the page you are reviewing, the icons and the contents they refer are as follows: `r emo::ji(tr)` <font color="red">**Turkish**</font>, `r emo::ji(eng)` <font color="red">**English**</font>, `r emo::ji(to.be.updated)` <font color="red">**Will be Updated**</font>, `r emo::ji(in.progress)` <font color="red">**In Progress**</font>, and `r emo::ji(outdated)` <font color="red">**No Longer Valid**</font>.
 {{% /alert %}}
 
+## Online-Class
+- [Microsoft Teams - Konuk Olarak Online Derse Bağlanma](https://www.youtube.com/watch?v=dP1UaNDRJxY&list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&index=1) `r emo::ji(tr)`
+- [CANVAS Bilgileri (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar) `r emo::ji(tr)``r emo::ji(in.progress)`
+
 ## Akademi Ekonometri
 - [Akademi Ekonometri - YouTube Kanalı](https://www.youtube.com/c/AkademiEkonometri) `r emo::ji(tr)`
 - [Ekonomi - Ders Videoları (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitn_vnaxzj2qx18n5f4P7qch) `r emo::ji(tr)`
@@ -37,13 +41,8 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 - [Economics - Course Videos (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg) `r emo::ji(eng)``r emo::ji(to.be.updated)`
     + [Economics - Online-Class (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU) `r emo::ji(eng)``r emo::ji(to.be.updated)`
 
-## Other Documents
-- `r emo::ji(in.progress)`
-
-## Online-Class
-- [Microsoft Teams - Konuk Olarak Online Derse Bağlanma](https://www.youtube.com/watch?v=dP1UaNDRJxY&list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&index=1) `r emo::ji(tr)`
-- [CANVAS Bilgileri (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar) `r emo::ji(tr)``r emo::ji(in.progress)`
-    - [DYS Bilgileri (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe) `r emo::ji(tr)``r emo::ji(outdated)`
+<!-- ## Other Documents -->
+<!-- - `r emo::ji(in.progress)` -->
 
 ## Other Links
 - [YÖK Dersleri Platformu](https://yokdersleri.yok.gov.tr/) `r emo::ji(tr)`
