--- a/content/courses/ekonometri-ars-I-II/3-exams-ps.Rmd
+++ b/content/courses/ekonometri-ars-I-II/3-exams-ps.Rmd
@@ -38,12 +38,11 @@ outdated <- "no_entry"
 - [Akademik Etik Açıklaması](`r paste0(ekonometri.ars.path, "Ekonometri_Ars_I-II_-_Akademik_Etik_Aciklamasi.pdf")`) `r emo::ji(tr)`
 - [JEL Sınıflandırma Kodları](https://www.aeaweb.org/jel/guide/jel.php) `r emo::ji(eng)`
 - [CANVAS'a Online Klasik Sınav Nasıl Yüklenir?]() `r emo::ji(tr)``r emo::ji(in.progress)`
-    - [DYS'ye Online Klasik Sınav Nasıl Yüklenir?](https://www.youtube.com/watch?v=wsUB6-fTxA8&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
 
 ## Sunum
 - [Sunum Değerlendirme Esasları (Ekonometri Araştırmaları I Dersi İçin)](`r paste0(ekonometri.ars.path, "Ekonometri_Ars_I_Sunum_Degerlendirme.pdf")`) `r emo::ji(tr)`
 - [Sunum Değerlendirme Esasları (Ekonometri Araştırmaları II Dersi İçin)](`r paste0(ekonometri.ars.path, "Ekonometri_Ars_II_Sunum_Degerlendirme.pdf")`) `r emo::ji(tr)`
-- [CANVAS'a Online Klasik Ödev veya Sunum Nasıl Yüklenir?]() `r emo::ji(tr)``r emo::ji(in.progress)`
+- [CANVAS'a Online Sunum Nasıl Yüklenir?]() `r emo::ji(tr)``r emo::ji(in.progress)`
 
 ### Örnek Makale ve Sunumlar
 - [Makale Örneği - Taslak (Ömer Kara)](`r paste0(ekonometri.ars.path, "Article.pdf")`) `r emo::ji(tr)`
