--- a/content/courses/ekonometri-i/2-links-docs.Rmd
+++ b/content/courses/ekonometri-i/2-links-docs.Rmd
@@ -30,6 +30,10 @@ outdated <- "no_entry"
 İncelediğiniz sayfada `r emo::ji(tr)` <font color="red">**Türkçe**</font>, `r emo::ji(eng)` <font color="red">**İngilizce**</font>, `r emo::ji(to.be.updated)` <font color="red">**Güncellenecek**</font>, `r emo::ji(in.progress)` <font color="red">**Üzerinde Çalışılan**</font> ve `r emo::ji(outdated)` <font color="red">**Artık Geçerli Olmayan**</font> içerikleri ifade eder.
 {{% /alert %}}
 
+## Online-Ders
+- [Microsoft Teams - Konuk Olarak Online Derse Bağlanma](https://www.youtube.com/watch?v=dP1UaNDRJxY&list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&index=1) `r emo::ji(tr)`
+- [CANVAS Bilgileri (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar) `r emo::ji(tr)``r emo::ji(in.progress)`
+
 ## Akademi Ekonometri
 - [Akademi Ekonometri - YouTube Kanalı](https://www.youtube.com/c/AkademiEkonometri) `r emo::ji(tr)`
 - [Ekonometri I - Ders Videoları (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlqshWDBUxxktcyDo8V4BvN) `r emo::ji(tr)``r emo::ji(in.progress)`
@@ -57,15 +61,8 @@ outdated <- "no_entry"
 - [Yunan Harfleri](`r paste0(ekonometri.i.path, "Yunan_Harfleri.pdf")`) `r emo::ji(tr)`
 - [wooldridge - R Paketi](`r paste0(ekonometri.i.path, "Package_wooldridge.pdf")`) `r emo::ji(eng)``r fa("r-project", fill = "steelblue")`
 
-## R mini BootCamp
-- [HTML](https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.html) `r emo::ji(eng)`
-    + [R](https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.R) `r emo::ji(eng)`
-
-## Online-Ders
-- [Microsoft Teams - Konuk Olarak Online Derse Bağlanma](https://www.youtube.com/watch?v=dP1UaNDRJxY&list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&index=1) `r emo::ji(tr)`
-- [CANVAS Bilgileri (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar) `r emo::ji(tr)``r emo::ji(in.progress)`
-    - [DYS Bilgileri (YouTube Playlist)](https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe) `r emo::ji(tr)``r emo::ji(outdated)`
-
 ## Diğer Linkler
+- [R mini BootCamp - HTML](https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.html) `r emo::ji(eng)`
+    + [R mini BootCamp - R](https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.R) `r emo::ji(eng)`
 - [YÖK Dersleri Platformu](https://yokdersleri.yok.gov.tr/) `r emo::ji(tr)`
 - [TÜBA Açık Ders Malzemeleri Portalı](https://acikders.tuba.gov.tr/) `r emo::ji(tr)`
