--- a/content/courses/ekonomi/3-exams-ps.Rmd
+++ b/content/courses/ekonomi/3-exams-ps.Rmd
@@ -32,15 +32,12 @@ outdated <- "no_entry"
 
 ## Ödevler
 - [CANVAS'ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
-    - [DYS'de Online Çoktan Seçmeli Ödev Nasıl Yapılır?](https://www.youtube.com/watch?v=OOqC0JrtOaI&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
 
 ## Sınavlar
 | Türkçe `r emo::ji(tr)` | İngilizce `r emo::ji(eng)` |
 | :--------------------- | :------------------------- |
-| [Ara Sınav - İnceleme](`r paste0(ekonomi.path, "Ekonomi - Ara Sinav Inceleme (Kara).pdf")`) | [Midterm Exam - Review](`r paste0(economics.path, "Economics - Midterm Exam Review (Kara).pdf")`) |
-| [Final Sınavı - İnceleme](`r paste0(ekonomi.path, "Ekonomi - Final Sinavi Inceleme (Kara).pdf")`) | [Final Exam - Review](`r paste0(economics.path, "Economics - Final Exam Review (Kara).pdf")`) |
+| [Ara Sınav - İnceleme](`r paste0(ekonomi.path, "Ekonomi - Ara Sinav Inceleme.pdf")`) | [Midterm Exam - Review](`r paste0(economics.path, "Economics - Midterm Exam Review.pdf")`) |
+| [Final Sınavı - İnceleme](`r paste0(ekonomi.path, "Ekonomi - Final Sinavi Inceleme.pdf")`) | [Final Exam - Review](`r paste0(economics.path, "Economics - Final Exam Review.pdf")`) |
 
 - [CANVAS'ta Online Çoktan Seçmeli Sınav Nasıl Yapılır?]() `r emo::ji(tr)``r emo::ji(in.progress)`
-    - [DYS'de Online Çoktan Seçmeli Sınav Nasıl Yapılır?](https://www.youtube.com/watch?v=V_Oyg-WGoK4&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
 - [CANVAS'a Online Klasik Sınav Nasıl Yüklenir]() `r emo::ji(tr)``r emo::ji(in.progress)`
-    - [DYS'ye Online Klasik Sınav Nasıl Yüklenir?](https://www.youtube.com/watch?v=wsUB6-fTxA8&feature=youtu.be) `r emo::ji(tr)``r emo::ji(outdated)`
