--- a/content/courses/zaman-serileri-analizi/4-lectures.Rmd
+++ b/content/courses/zaman-serileri-analizi/4-lectures.Rmd
@@ -30,10 +30,6 @@ outdated <- "no_entry"
 İncelediğiniz sayfada `r emo::ji(tr)` <font color="red">**Türkçe**</font>, `r emo::ji(eng)` <font color="red">**İngilizce**</font>, `r emo::ji(to.be.updated)` <font color="red">**Güncellenecek**</font>, `r emo::ji(in.progress)` <font color="red">**Üzerinde Çalışılan**</font> ve `r emo::ji(outdated)` <font color="red">**Artık Geçerli Olmayan**</font> içerikleri ifade eder.
 {{% /alert %}}
 
-## R mini BootCamp
-- [HTML](https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.html) `r emo::ji(eng)`
-    + [R](https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.R) `r emo::ji(eng)`
-
 ## Hafta #1
 - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
 - [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_1.pdf")`) `r emo::ji(tr)`
@@ -57,9 +53,9 @@ outdated <- "no_entry"
     + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "Hafta_3/", "Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.Rmd")`) `r emo::ji(tr)`
     + [Uygulama - R](`r paste0(zaman.serileri.analizi.r.path, "Hafta_3/", "Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.R")`) `r emo::ji(tr)`
 
-## Hafta #4
-- [Video]() `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_4.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
-- [Uygulama - HTML](`r paste0(zaman.serileri.analizi.r.link, "Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.html")`) `r emo::ji(tr)``r emo::ji(in.progress)`
-    + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "Hafta_4/", "Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.Rmd")`) `r emo::ji(tr)``r emo::ji(in.progress)`
-    + [Uygulama - R](`r paste0(zaman.serileri.analizi.r.path, "Hafta_4/", "Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.R")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+<!-- ## Hafta #4 -->
+<!-- - [Video]() `r emo::ji(tr)``r emo::ji(in.progress)` -->
+<!-- - [Slaytlar](`r paste0(zaman.serileri.analizi.path, "Zaman_Serileri_Analizi_-_Hafta_4.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)` -->
+<!-- - [Uygulama - HTML](`r paste0(zaman.serileri.analizi.r.link, "Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.html")`) `r emo::ji(tr)``r emo::ji(in.progress)` -->
+<!--     + [Uygulama - RMarkdown](`r paste0(zaman.serileri.analizi.r.path, "Hafta_4/", "Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.Rmd")`) `r emo::ji(tr)``r emo::ji(in.progress)` -->
+<!--     + [Uygulama - R](`r paste0(zaman.serileri.analizi.r.path, "Hafta_4/", "Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.R")`) `r emo::ji(tr)``r emo::ji(in.progress)` -->
