--- a/content/courses/finansal-ekonometri/01-ec.Rmd
+++ b/content/courses/finansal-ekonometri/01-ec.Rmd
@@ -37,11 +37,11 @@ Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için [Telegr
 - [QR Kod - Telefon İçin](`r paste0(finansal.ekonometri.path, "EC/Finansal_Ekonometri_-_Telegram_Kanali_Duyurusu_Ilan.pdf")`) `r emo::ji(tr)`
 
 ## Ders Planı ve Önemli Günler
-- [Ders Planı](`r paste0(finansal.ekonometri.path, "EC/Finansal_Ekonometri_-_Ders_Plani.pdf")`) `r emo::ji(tr)`
-- [Önemli Günler](`r paste0(finansal.ekonometri.path, "EC/Finansal_Ekonometri_-_Onemli_Gunler.pdf")`) `r emo::ji(tr)`
+- [Ders Planı](`r paste0(finansal.ekonometri.path, "EC/Finansal_Ekonometri_-_Ders_Plani.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
+- [Önemli Günler](`r paste0(finansal.ekonometri.path, "EC/Finansal_Ekonometri_-_Onemli_Gunler.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
 
 ## Ders Kitabı
-- [Kitap Seçimi Açıklaması](`r paste0(finansal.ekonometri.path, "Finansal_Ekonometri_-_Kitap_Secimi_Aciklamasi.pdf")`) `r emo::ji(tr)`
+- [Kitap Seçimi Açıklaması](`r paste0(finansal.ekonometri.path, "Finansal_Ekonometri_-_Kitap_Secimi_Aciklamasi.pdf")`) `r emo::ji(tr)``r emo::ji(in.progress)`
 
 ## Ders Değerlendirme Anketi
 - [Ders Değerlendirme Anketi - Açıklama](`r paste0(finansal.ekonometri.path, "EC/Finansal_Ekonometri_-_Ders_Degerlendirme_Anketi.pdf")`) `r emo::ji(tr)`
